Add asdf plugins

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -6,12 +6,18 @@ all:
         asdf:
           run: true
           plugins:
+            - name: helm
+              url: https://github.com/Antiarchitect/asdf-helm.git
+            - name: helmfile
+              url: https://github.com/feniix/asdf-helmfile.git
             - name: kubectl
               url: https://github.com/asdf-community/asdf-kubectl.git
             - name: packer
               url: https://github.com/asdf-community/asdf-hashicorp.git
             - name: terraform
               url: https://github.com/asdf-community/asdf-hashicorp.git
+            - name: yq
+              url: https://github.com/sudermanjr/asdf-yq.git
           version: v0.8.1
         awscli:
           run: true
